[gd_scene load_steps=24 format=2]

[ext_resource path="res://samurai/sai/idle/9.png" type="Texture" id=1]
[ext_resource path="res://tower2.gd" type="Script" id=2]
[ext_resource path="res://samurai/sai/idle/6.png" type="Texture" id=3]
[ext_resource path="res://samurai/sai/idle/8.png" type="Texture" id=4]
[ext_resource path="res://samurai/sai/idle/7.png" type="Texture" id=5]
[ext_resource path="res://samurai/sai/idle/4.png" type="Texture" id=6]
[ext_resource path="res://samurai/sai/idle/5.png" type="Texture" id=7]
[ext_resource path="res://samurai/sai/attack/8.png" type="Texture" id=8]
[ext_resource path="res://samurai/sai/idle/0.png" type="Texture" id=9]
[ext_resource path="res://samurai/sai/idle/1.png" type="Texture" id=10]
[ext_resource path="res://samurai/sai/idle/2.png" type="Texture" id=11]
[ext_resource path="res://samurai/sai/idle/3.png" type="Texture" id=12]
[ext_resource path="res://samurai/sai/attack/1.png" type="Texture" id=13]
[ext_resource path="res://samurai/sai/attack/4.png" type="Texture" id=14]
[ext_resource path="res://samurai/sai/attack/5.png" type="Texture" id=15]
[ext_resource path="res://samurai/sai/attack/0.png" type="Texture" id=16]
[ext_resource path="res://samurai/sai/attack/3.png" type="Texture" id=17]
[ext_resource path="res://samurai/sai/attack/2.png" type="Texture" id=18]
[ext_resource path="res://samurai/sai/attack/6.png" type="Texture" id=19]
[ext_resource path="res://samurai/sai/attack/7.png" type="Texture" id=20]
[ext_resource path="res://samurai/sai/attack/9.png" type="Texture" id=21]

[sub_resource type="SpriteFrames" id=2]
animations = [ {
"frames": [ ExtResource( 9 ), ExtResource( 10 ), ExtResource( 11 ), ExtResource( 12 ), ExtResource( 6 ), ExtResource( 7 ), ExtResource( 3 ), ExtResource( 5 ), ExtResource( 4 ), ExtResource( 1 ) ],
"loop": true,
"name": "idle",
"speed": 15.0
}, {
"frames": [ ExtResource( 16 ), ExtResource( 13 ), ExtResource( 18 ), ExtResource( 17 ), ExtResource( 14 ), ExtResource( 15 ), ExtResource( 19 ), ExtResource( 20 ), ExtResource( 8 ), ExtResource( 21 ) ],
"loop": true,
"name": "attack",
"speed": 20.0
} ]

[sub_resource type="CircleShape2D" id=1]
radius = 154.003

[node name="tower2" type="Node2D"]
script = ExtResource( 2 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
position = Vector2( 0, -1 )
scale = Vector2( 0.3, 0.3 )
frames = SubResource( 2 )
animation = "idle"
frame = 9
playing = true

[node name="detection_area" type="Area2D" parent="."]

[node name="collision_shape" type="CollisionShape2D" parent="detection_area"]
shape = SubResource( 1 )

[node name="attack_speed" type="Timer" parent="."]
autostart = true

[connection signal="attack" from="." to="." method="_on_tower2_attack"]
[connection signal="idle" from="." to="." method="_on_tower2_idle"]
[connection signal="area_entered" from="detection_area" to="." method="_on_detection_area_area_entered"]
[connection signal="area_exited" from="detection_area" to="." method="_on_detection_area_area_exited"]
[connection signal="timeout" from="attack_speed" to="." method="_on_attack_speed_timeout"]
